[gd_scene load_steps=5 format=3 uid="uid://c1i7rtedy5fyo"]

[ext_resource type="Script" uid="uid://c7rt66m06w7vj" path="res://Scripts/ActionTree.gd" id="1_06akd"]
[ext_resource type="Script" uid="uid://6te3b1tnse4e" path="res://Scripts/LinesLayer.gd" id="2_7wvbo"]
[ext_resource type="PackedScene" path="res://Data/skill_button.tscn" id="3_kvaft"]
[ext_resource type="Script" uid="uid://cvvntr40ye1d4" path="res://Scripts/ActionNode.gd" id="4_r8c0s"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06akd")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.39308554, 0.3930855, 0.39308548, 1)

[node name="TreeContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 768.0
offset_bottom = 432.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)

[node name="LinesLayer" type="Control" parent="TreeContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_7wvbo")

[node name="NodesLayer" type="Control" parent="TreeContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="1" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 673.6664
offset_top = 110.66667
offset_right = 737.6664
offset_bottom = 150.66669
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="2" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 929.6665
offset_top = 102.66665
offset_right = 993.6665
offset_bottom = 142.66666
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="3" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1185.6666
offset_top = 110.66667
offset_right = 1249.6666
offset_bottom = 150.66669
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="4" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 545.6666
offset_top = 126.66667
offset_right = 609.6666
offset_bottom = 166.66667
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="5" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 767.66675
offset_top = 142.66663
offset_right = 831.66675
offset_bottom = 182.66663
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="6" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 865.6669
offset_top = 170.66672
offset_right = 929.6669
offset_bottom = 210.66672
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="7" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 993.6666
offset_top = 170.66672
offset_right = 1057.6667
offset_bottom = 210.66672
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="8" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1091.6664
offset_top = 142.66663
offset_right = 1155.6664
offset_bottom = 182.66663
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="9" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1313.6666
offset_top = 126.66667
offset_right = 1377.6666
offset_bottom = 166.66667
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="10" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 417.66675
offset_top = 214.66663
offset_right = 481.66675
offset_bottom = 254.66663
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="11" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 561.6669
offset_top = 214.66663
offset_right = 625.6669
offset_bottom = 254.66663
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="12" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 681.6664
offset_top = 198.66666
offset_right = 745.6664
offset_bottom = 238.66666
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="13" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 849.6664
offset_top = 238.66663
offset_right = 913.6664
offset_bottom = 278.66663
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="14" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1009.6664
offset_top = 238.66663
offset_right = 1073.6665
offset_bottom = 278.66663
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="15" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1177.6664
offset_top = 198.66666
offset_right = 1241.6664
offset_bottom = 238.66666
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="16" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1297.6667
offset_top = 214.66663
offset_right = 1361.6667
offset_bottom = 254.66663
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="17" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1441.667
offset_top = 214.66663
offset_right = 1505.667
offset_bottom = 254.66663
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="18" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 321.66666
offset_top = 302.6666
offset_right = 385.66666
offset_bottom = 342.6666
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="19" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 545.6666
offset_top = 310.6666
offset_right = 609.6666
offset_bottom = 350.6666
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="20" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 697.6666
offset_top = 286.6666
offset_right = 761.6666
offset_bottom = 326.6666
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="21" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 929.6665
offset_top = 318.66666
offset_right = 993.6665
offset_bottom = 358.66666
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="22" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1161.6666
offset_top = 286.6666
offset_right = 1225.6666
offset_bottom = 326.6666
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="23" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1313.6666
offset_top = 310.6666
offset_right = 1377.6666
offset_bottom = 350.6666
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="24" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1537.6667
offset_top = 302.6666
offset_right = 1601.6667
offset_bottom = 342.6666
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="25" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 449.66663
offset_top = 367.6667
offset_right = 513.6666
offset_bottom = 407.6667
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="26" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1409.6666
offset_top = 366.6666
offset_right = 1473.6666
offset_bottom = 406.6666
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="27" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 449.66663
offset_top = 438.6667
offset_right = 513.6666
offset_bottom = 478.6667
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="28" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 609.6666
offset_top = 422.6666
offset_right = 673.6666
offset_bottom = 462.6666
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="29" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 793.6666
offset_top = 382.6667
offset_right = 857.6666
offset_bottom = 422.6667
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="30" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 929.6665
offset_top = 406.66675
offset_right = 993.6665
offset_bottom = 446.66675
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="31" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1065.6665
offset_top = 382.6667
offset_right = 1129.6665
offset_bottom = 422.6667
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="32" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1249.6666
offset_top = 422.6666
offset_right = 1313.6666
offset_bottom = 462.6666
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="33" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1409.6666
offset_top = 438.6667
offset_right = 1473.6666
offset_bottom = 478.6667
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="34" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 289.66666
offset_top = 518.6666
offset_right = 353.66666
offset_bottom = 558.6666
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="35" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 681.6664
offset_top = 518.6666
offset_right = 745.6664
offset_bottom = 558.6666
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="36" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 833.6664
offset_top = 518.6666
offset_right = 897.6664
offset_bottom = 558.6666
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="37" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1025.6665
offset_top = 518.6666
offset_right = 1089.6665
offset_bottom = 558.6666
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="38" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1177.6664
offset_top = 518.6666
offset_right = 1241.6664
offset_bottom = 558.6666
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="39" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1570.6664
offset_top = 518.6666
offset_right = 1634.6664
offset_bottom = 558.6666
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="40" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 449.66663
offset_top = 606.6665
offset_right = 513.6666
offset_bottom = 646.6665
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="41" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 609.6666
offset_top = 622.6666
offset_right = 673.6666
offset_bottom = 662.6666
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="42" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 793.6666
offset_top = 662.66656
offset_right = 857.6666
offset_bottom = 702.66656
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="43" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 929.6665
offset_top = 638.66675
offset_right = 993.6665
offset_bottom = 678.66675
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="44" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1065.6665
offset_top = 662.66656
offset_right = 1129.6665
offset_bottom = 702.66656
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="45" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1249.6666
offset_top = 622.6666
offset_right = 1313.6666
offset_bottom = 662.6666
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="46" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1409.6666
offset_top = 606.6665
offset_right = 1473.6666
offset_bottom = 646.6665
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="47" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 449.66663
offset_top = 678.66675
offset_right = 513.6666
offset_bottom = 718.66675
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="48" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1409.6666
offset_top = 678.66675
offset_right = 1473.6666
offset_bottom = 718.66675
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="49" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 321.66666
offset_top = 742.6667
offset_right = 385.66666
offset_bottom = 782.6667
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="50" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 545.6666
offset_top = 734.6666
offset_right = 609.6666
offset_bottom = 774.6666
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="51" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 697.6666
offset_top = 758.66675
offset_right = 761.6666
offset_bottom = 798.66675
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="52" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 929.6665
offset_top = 726.66675
offset_right = 993.6665
offset_bottom = 766.66675
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="53" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1161.6666
offset_top = 758.66675
offset_right = 1225.6666
offset_bottom = 798.66675
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="54" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1313.6666
offset_top = 734.6666
offset_right = 1377.6666
offset_bottom = 774.6666
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="55" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1537.6667
offset_top = 742.6667
offset_right = 1601.6667
offset_bottom = 782.6667
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="56" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 417.66675
offset_top = 830.66656
offset_right = 481.66675
offset_bottom = 870.66656
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="57" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 561.6669
offset_top = 830.66656
offset_right = 625.6669
offset_bottom = 870.66656
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="58" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 681.6664
offset_top = 846.66675
offset_right = 745.6664
offset_bottom = 886.66675
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="59" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 849.6664
offset_top = 814.6666
offset_right = 913.6664
offset_bottom = 854.6666
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="60" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1009.6664
offset_top = 814.6666
offset_right = 1073.6665
offset_bottom = 854.6666
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="61" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1177.6664
offset_top = 846.66675
offset_right = 1241.6664
offset_bottom = 886.66675
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="62" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1297.6667
offset_top = 830.66656
offset_right = 1361.6667
offset_bottom = 870.66656
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="63" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1441.667
offset_top = 830.66656
offset_right = 1505.667
offset_bottom = 870.66656
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="64" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 545.6666
offset_top = 918.6667
offset_right = 609.6666
offset_bottom = 958.6667
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="65" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 768.6665
offset_top = 902.6666
offset_right = 832.6665
offset_bottom = 942.6666
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="66" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 865.6669
offset_top = 882.6668
offset_right = 929.6669
offset_bottom = 922.6668
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="67" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 993.6666
offset_top = 882.6668
offset_right = 1057.6667
offset_bottom = 922.6668
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="68" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1091.6664
offset_top = 902.6666
offset_right = 1155.6664
offset_bottom = 942.6666
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="69" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1313.6666
offset_top = 918.6667
offset_right = 1377.6666
offset_bottom = 958.6667
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="70" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 673.6664
offset_top = 934.6665
offset_right = 737.6664
offset_bottom = 974.6665
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="71" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 929.6665
offset_top = 942.6668
offset_right = 993.6665
offset_bottom = 982.6668
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="72" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1185.6666
offset_top = 934.6665
offset_right = 1249.6666
offset_bottom = 974.6665
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="73" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 917.6664
offset_top = 22.666634
offset_right = 981.6664
offset_bottom = 62.666634
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="74" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 171.66656
offset_top = 508.66663
offset_right = 235.66656
offset_bottom = 548.6666
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="75" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 1675.667
offset_top = 508.66663
offset_right = 1739.667
offset_bottom = 548.6666
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="76" parent="TreeContainer/NodesLayer" instance=ExtResource("3_kvaft")]
layout_mode = 0
offset_left = 917.6664
offset_top = 1005.6667
offset_right = 981.6664
offset_bottom = 1045.6667
texture_normal = null
script = ExtResource("4_r8c0s")

[node name="ConfirmButton" type="Button" parent="TreeContainer"]
layout_mode = 0
offset_left = 93.33333
offset_top = 168.33333
offset_right = 164.33333
offset_bottom = 199.33333
text = "Confirm"

[connection signal="pressed" from="TreeContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
